Pass content type parameter